# RHESSys

./: .gitignore  CMakeLists.txt  README-ZHULJ.md  README.md
cf/: CMakeLists.txt  makefile
rhessys/: CMakeLists.txt  main.c  makefile
rhessys/cn/: compute_N_absorbed.c
rhessys/include/: rhessys.h
rhessys/init/: construct_ascii_grid.c  construct_command_line.c
rhessys/util/: alloc.c
util/GRASS/cst/: Makefile
util/GRASS/cxy/: Makefile
